--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier:fix": "prettier . --write"
   },
   "dependencies": {
+    "joi": "^17.6.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
