--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "joi": "^17.6.0",
+    "mongodb": "^4.7.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
