--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "prettier:fix": "prettier . --write"
   },
   "dependencies": {
+    "aws-sdk": "^2.1167.0",
+    "formidable": "^2.0.1",
     "joi": "^17.6.0",
     "mongodb": "^4.7.0",
     "next": "12.2.0",
+    "next-connect": "^0.12.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "eslint": "^8.18.0",
