--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-connect": "^0.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
