--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "aws-sdk": "^2.1167.0",
     "axios": "^0.27.2",
+    "bson-objectid": "^2.0.3",
     "formidable": "^2.0.1",
     "joi": "^17.6.0",
     "mongodb": "^4.7.0",
