--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bson-objectid": "^2.0.3",
     "formidable": "^2.0.1",
+    "inversify": "^6.0.1",
     "joi": "^17.6.0",
     "mongodb": "^4.7.0",
     "next": "12.2.0",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
     "react-toastify": "^9.0.5",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
