--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint ./ --ext js,jsx,ts,tsx",
     "lint:fix": "eslint --fix --ext .ts,.tsx,js,jsx .",
     "prettier": "prettier . --check",
-    "prettier:fix": "prettier . --write"
+    "prettier:fix": "prettier . --write",
+    "test": "jest --watch"
   },
   "dependencies": {
     "aws-sdk": "^2.1167.0",
@@ -30,7 +31,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/formidable": "^2.0.5",
+    "@types/jest": "^28.1.4",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
@@ -45,8 +49,11 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "pre-commit": "^1.2.2",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
     "typescript": "4.7.4"
   },
   "pre-commit": [
