--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx,js,jsx .",
     "prettier": "prettier . --check",
     "prettier:fix": "prettier . --write",
-    "test": "jest --watch"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "aws-sdk": "^2.1167.0",
@@ -57,6 +58,7 @@
     "typescript": "4.7.4"
   },
   "pre-commit": [
-    "lint"
+    "lint",
+    "test"
   ]
 }
